--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "@ngrx/effects": "^8.0.0",
     "@ngrx/store": "^8.0.0",
     "@ngrx/store-devtools": "^8.0.0",
+    "google-libphonenumber": "^3.2.15",
+    "intl-tel-input": "^17.0.3",
+    "ngx-bootstrap": "^5.6.2",
+    "ngx-intl-tel-input": "^2.5.2",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
