--- a/angular.json
+++ b/angular.json
@@ -124,8 +124,13 @@
               "devServerTarget": "filed:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {}
         }
       }
-    }},
+    }
+  },
   "defaultProject": "filed"
 }
